# excel_data_transfer

./: README.md  input_file.xlsx  logging_conf.yaml  pyproject.toml  target_file.xlsx
src/: data_transfer.py  main.py
